[package]
name = "mpesa-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-rustls = "0.23"
rustls = "0.20" 
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
thiserror = "1.0"
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
